# mcberepair

./: .clang-tidy  .codecov.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  base64.cpp  blockposhash.cc  blockposhash.cpp  compile.bat  copy.cc  copyall.cc  copyall.cpp  db.hpp  delnether.cc  dumpkey.cc  listkeys.cc  main.cc  mcbekey.hpp  mcberepair.sublime-project.in  nbt.cc  nbt.hpp  perenc.hpp  repair.cc  repair.cpp  rmkeys.cc  rmkeys.cpp  slurp.hpp  version.h.in  writekey.cc  writekey.cpp
.ci/: lcov.bash  lcov.sh
.circleci/: config.yml
conf/: .gitattributes  configure.cmake  cppcheck_suppressions.txt  devopt.cmake  gitmeta.cmake  semver.cmake
coverage/: CMakeLists.txt
modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindGcovr.cmake  FindLEVELDB_MCPE.cmake
tests/: CMakeLists.txt  RunMCBERepair.cmake
tests/RunCopyall/: BadCommand1-stderr.txt  Help-stdout.txt  NoArgs-stdout.txt  RunTest.cmake  TwoArgsPostTest-stdout.txt
tests/RunDumpKey/: BadCommand-stderr.txt  Help-stdout.txt  RunTest.cmake  UnknownKey-stderr.txt
tests/RunHelp/: BadCommand-stderr.txt  Default-stdout.txt  HelpHelp-stdout.txt  NoArgs-stdout.txt  RunTest.cmake
tests/RunListKeys/: Help-stdout.txt  OneArg-stdout.txt  RunTest.cmake
tests/RunMain/: BadCommand-stderr.txt  NoArgs-stdout.txt  RunTest.cmake
tests/RunRepair/: BadCommand-stderr.txt  Help-stdout.txt  RunTest.cmake
tests/RunRmKeys/: BadKeys-stdout.txt  Help-stdout.txt  MultiArgs-stdout.txt  MultiArgsPostTest-stdout.txt  OneArg-stdin.txt  OneArg-stdout.txt  OneArgPostTest-stdout.txt  PercentDecode-stdout.txt  RunTest.cmake
tests/RunVersion/: Default-stdout.txt  RunTest.cmake
tests/RunWriteKey/: BadKey-stderr.txt  NoArgs-stdout.txt  OneArg-stdout.txt  RunTest.cmake
tests/minecraftWorlds/: TestWorld01.mcworld
